maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: value Int is not a member of scala.collection.immutable.IndexedSeq[Char]
  var marquage:Int=litMessage.to.Int(x,y)
                                 ^